Fix header spacing.

--- a/App_Themes/WSMA/css/99-WSMA.css
+++ b/App_Themes/WSMA/css/99-WSMA.css
@@ -46,9 +46,7 @@
     float: left;
     margin-right: 2%; }
   .has-secondary-col.col-on-right .col-secondary {
-    float: right;
-    position: sticky;
-    top: 50px; }
+    float: right; }
   .has-secondary-col.col-on-left .col-primary {
     float: right;
     margin-left: 2%; }
@@ -62,9 +60,7 @@
   float: left;
   margin-right: 2%; }
 .no-mqs .has-secondary-col.col-on-right .col-secondary {
-  float: right;
-  position: sticky;
-  top: 50px; }
+  float: right; }
 .no-mqs .has-secondary-col.col-on-left .col-primary {
   float: right;
   margin-left: 2%; }
@@ -116,7 +112,8 @@
     .navbar-collapse {
       /* expand to the full width of the page */
       margin-left: -15px;
-      margin-right: -15px; } }
+      margin-right: -15px;
+      margin-top: 65px; } }
   @media (min-width: 768px) {
     .navbar-collapse {
       clear: right; } }
@@ -166,7 +163,7 @@
 /* Main
    ========================================================================== */
 #masterContentArea {
-  margin-top: 0px; }
+  margin-top: 4px; }
   @media (max-width: 767px) {
     #masterContentArea {
       margin-top: 20px; } }
@@ -659,8 +656,8 @@ h2, .h2, .PanelHead.Distinguish,
     background-size: cover;
     background-repeat: no-repeat;
     background-position: left;
-    margin-bottom: 60px;
-    margin-top: 99px; }
+    margin-bottom: 25px;
+    margin-top: 120px; }
     .Wrapper-HomePage .body-container .breadcrumb-obo-container {
       display: none;
       background-image: none; }
@@ -699,8 +696,8 @@ h2, .h2, .PanelHead.Distinguish,
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left;
-  margin-bottom: 60px;
-  margin-top: 99px; }
+  margin-bottom: 25px;
+  margin-top: 120px; }
   .Wrapper-HomePage .no-mqs .body-container .breadcrumb-obo-container {
     display: none;
     background-image: none; }
