--- a/App_Themes/WSMA/sass/NaturalHeritageSites/_WSMA.scss
+++ b/App_Themes/WSMA/sass/NaturalHeritageSites/_WSMA.scss
@@ -494,8 +494,8 @@ h2, .h2, .PanelHead.Distinguish,
             background-size: cover;
             background-repeat: no-repeat;
             background-position: left;
-            margin-bottom: 60px;
-            margin-top:99px;
+            margin-bottom: 25px;
+            margin-top:120px;
             .Wrapper-HomePage & {
                 display: none;
                 background-image: none;
