--- a/App_Themes/WSMA/sass/NaturalHeritageSites/layouts/_naturalHeritageSites-mp.scss
+++ b/App_Themes/WSMA/sass/NaturalHeritageSites/layouts/_naturalHeritageSites-mp.scss
@@ -124,6 +124,7 @@
         /* expand to the full width of the page */
         margin-left: -($grid-gutter-width/2);
         margin-right: -($grid-gutter-width/2);
+        margin-top: 65px;
     }
 
     @include respond-to('grid large') { 
@@ -189,7 +190,7 @@
    ========================================================================== */
    
 #masterContentArea {
-    margin-top: 0px;
+    margin-top: 4px;
     @include respond-to('grid small') {
         margin-top: 20px;
     }
